reorganize mixin